# tikki

./: .env.example  .gitignore  ADMIN_PORTAL_SETUP.md  HIGHLEVEL_INTEGRATION.md  MIGRATION_GUIDE.md  README.md
backend/: pyproject.toml  pyrightconfig.json  run.sh
backend/app/: config.py  dependencies.py  main.py  memory.py  schemas.py
backend/app/lib/: __init__.py
backend/app/lib/chat/: __init__.py  message_handler.py
backend/app/lib/embeddings/: __init__.py  generator.py
backend/app/lib/highlevel/: __init__.py  service.py
backend/app/lib/memory/: __init__.py  conversation.py  episodic.py  semantic.py
backend/app/lib/model/: __init__.py  llm.py  prompt.py
backend/app/lib/rag/: __init__.py  document_processor.py  job_processor.py  retrieval.py  web_search.py
backend/app/lib/security/: __init__.py  encryption.py
backend/app/lib/summaries/: __init__.py  generator.py
backend/app/lib/supabase/: __init__.py  client.py
backend/app/routes/: admin.py  auth.py  billing.py  chat.py
backend/scripts/: get_highlevel_custom_fields.py  list_highlevel_locations.py  migrate_users_to_supabase_auth.py  test_highlevel_contact.py
frontend/: .eslintrc.json  .gitignore  PWA_ICONS_README.md  next.config.mjs  package-lock 2.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
supabase/: add_delete_policy_messages.sql  complete_schema.sql  fix_rls_policies.sql  migration_add_admin_tables.sql  migration_add_billing_intents.sql  migration_add_embeddings.sql  migration_add_full_name.sql  migration_add_rag_rpc.sql  migration_add_user_onboarding.sql  (+3 more)
(+61 files in other folders)
